# ml_from_scratch

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
notebooks/: 01_linear_regression.ipynb  02_logistic_regression.ipynb  03_overfitting.ipynb
scripts/: compare_sklearn.py  train_linear.py  train_logistic.py  train_polynomial.py
src/ml_from_scratch/: __init__.py  datasets.py  linear_regression.py  logistic_regression.py  metrics.py  plotting.py  preprocessing.py
tests/: test_datasets.py  test_linear_regression.py  test_logistic_regression.py  test_metrics.py  test_plotting.py  test_preprocessing.py
