# pyproject.toml — Defines package metadata, dependencies, and tool settings.
# It keeps setup, test, and lint configuration in one standard project file.
# Author: Pasquale Marzaioli

[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-from-scratch"
version = "0.1.0"
description = "Educational machine learning algorithms implemented from scratch."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Pasquale Marzaioli" }]
dependencies = [
    "numpy==2.4.6",
    "matplotlib==3.10.9",
]

[project.optional-dependencies]
comparison = [
    "scikit-learn==1.9.0",
]
notebooks = [
    "jupyterlab==4.4.4",
    "nbclient==0.10.2",
    "ipykernel==6.30.0",
]
dev = [
    "pytest==8.4.1",
    "ruff==0.12.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
